# data_lakehouse_10m_poetry

./: .gitignore  pyproject.toml
