[tool.poetry]
name = "data-lakehouse-10m-poetry"
version = "0.1.0"
description = ""
authors = ["cleydsonborges"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
taipy = "^4.0.1"
polars = "^1.15.0"
faker = "^33.1.0"
duckdb = "^1.1.3"
dbt-core = "^1.8.9"
dbt-postgres = "^1.8.2"
psycopg2 = "^2.9.10"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
